# jarvis

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  HANDOFF.md  README.md  auditoria_documento_mestre_jarvis.md  conftest.py  documento_mestre_do_jarvis.md  documento_mestre_jarvis.md  package.json  pyproject.toml
.github/workflows/: engineering-gate.yml
apps/: README.md  __init__.py
apps/jarvis_console/: __init__.py  __main__.py  bootstrap.py  (+3 more)
engines/: README.md
evolution/: README.md
governance/: README.md
infra/: README.md  local-postgres.compose.yml
knowledge/: README.md
memory/: README.md
observability/: README.md
services/: README.md
shared/: README.md  __init__.py  artifact_policy.py  autonomy_ladder.py  contract_validation.py  domain_onboarding.py  domain_registry.py  eval_expansion.py  memory_influence_policy.py  memory_registry.py  mind_domain_specialist_contract.py  mind_registry.py  open_loop_policy.py  optimization_state.py  recurring_patterns.py  specialist_registry.py  technology_absorption.py  work_item_policy.py
tests/: README.md  conftest.py
tools/: README.md  __init__.py  check_mojibake.py  close_alignment_cycle.py  close_continuity_cycle.py  close_domain_consumers_and_workflows_cut.py  close_governed_benchmark_execution_cut.py  close_memory_gap_evidence_cut.py  close_native_memory_scope_hardening_cut.py  close_post_v1_cycle.py  close_repository_hygiene_and_tools_review_cut.py  close_sovereign_alignment_cut.py  close_specialization_cycle.py  close_stateful_runtime_cycle.py  close_v1_5_cycle.py  compare_orchestrator_paths.py  domain_eval_support.py  engineering_gate.py  evolution_from_pilot.py  fix_mojibake.py  go_live_internal_checklist.py  internal_pilot_report.py  internal_pilot_support.py  longitudinal_learning_report.py  operational_artifacts.py  readiness_dashboard.py  render_governed_benchmark_decisions.py  render_governed_benchmark_execution_plan.py  render_governed_benchmark_matrix.py  render_governed_benchmark_scenario_specs.py  render_memory_gap_baseline_evidence.py  render_memory_gap_decision.py  render_memory_gap_evidence_protocol.py  render_repository_hygiene_doc_decisions.py  render_repository_hygiene_inventory.py  render_repository_hygiene_tool_decisions.py  routing_adaptation_evidence.py  run_domain_eval.py  run_internal_pilot.py  validate_baseline.py  (+7 more)
(+287 files in other folders)
